# podcast-transcribe

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG-prepare-text-refactor.md  CLAUDE.md  PLAN-prepare-text-refactor.md  README.md  RECOMMENDATIONS.md  TTS-TEST-PLAN.md  comparison.py  delete_duplicates.py  find_duplicates.py  multi_voice.py  plan.md  process-aws.sh  process-caller.sh  process-openai.sh  process.sh  pyproject.toml  ssml_mapper.py
.github/workflows/: ci.yml
dropcaster-docker/: docker-compose-local.yml  docker-compose.aws.yml  docker-compose.openai.yml  docker-compose.yml
dropcaster-docker/audio/: channel.yml  index.html
dropcaster-docker/audio-aws/: channel.yml
dropcaster-docker/audio-openai/: channel.yml
imap/: Pipfile  compare_html_extraction.py  forward_emails.py  parse_email.py  pyproject.toml  test_parse_email.py
nginx-proxy-certbot-docker/: docker-compose.yml
nginx-proxy-certbot-docker/overrides/: im.klt.pw
other-sites/yt-transcribe/: Dockerfile  package-lock.json  package.json
other-sites/yt-transcribe/pages/: _app.tsx  _document.tsx  index.tsx
other-sites/yt-transcribe/pages/api/: getSummary.ts  getTranscript.ts
prepare-text/: filters.example.yaml  prepare_text.py  pyproject.toml  test_prepare_text.py
rss/: Pipfile  check-rss.py  pyproject.toml  test_check_rss.py
shared/: pyproject.toml
shared/podcast_shared/: __init__.py
text-to-speech/: Pipfile  pyproject.toml  test_text_to_speech.py  text_to_speech.py
text-to-speech-openai/: Pipfile  text_to_speech_openai.py
text-to-speech-polly/: Pipfile  text_to_speech_polly.py
