[project]
name = "imap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "imap-tools>=1.9.0",
    "markdown>=3.7",
    "mutagen>=1.47.0",
    "openai>=1.50.0",
    "playwright>=1.49.1",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "waybackpy>=3.0.6",
    "yt-dlp>=2025.10.14",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.7.0",
    "types-beautifulsoup4>=4.12.0",
    "types-python-dateutil>=2.9.0",
    "types-requests>=2.32.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
preview = true

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.9"
