[project]
name = "imap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "imap-tools>=1.9.0",
    "markdown>=3.7",
    "podcast-shared",
    "playwright>=1.49.1",
    "trafilatura>=2.0.0",
    "yt-dlp>=2025.10.14",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.7.0",
    "types-beautifulsoup4>=4.12.0",
    "types-python-dateutil>=2.9.0",
    "types-requests>=2.32.0",
]

[tool.ruff]
extend = "../pyproject.toml"

[tool.basedpyright]
extends = "../pyproject.toml"

[tool.uv.sources]
podcast-shared = { path = "../shared" }
