[project]
name = "prepare-text"
version = "0.1.0"
description = "Text preparation pipeline: filtering, cleaning, and transformation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "google-genai>=1.0.0",
    "markdown>=3.7",
    "pyyaml>=6.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.7.0",
    "types-beautifulsoup4>=4.12.0",
    "types-pyyaml>=6.0",
    "types-requests>=2.32.0",
]

[tool.ruff]
extend = "../pyproject.toml"

[tool.basedpyright]
extends = "../pyproject.toml"
