[project]
name = "prepare-text"
version = "0.1.0"
description = "Text preparation pipeline: filtering, cleaning, and transformation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "markdown>=3.7",
    "podcast-shared",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.7.0",
    "types-beautifulsoup4>=4.12.0",
    "types-pyyaml>=6.0",
    "types-requests>=2.32.0",
]

[tool.ruff]
extend = "../pyproject.toml"

[tool.basedpyright]
extends = "../pyproject.toml"

[tool.uv.sources]
podcast-shared = { path = "../shared" }
