[project]
name = "rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "msgspec>=0.19.0",
    "openai>=1.50.0",
    "playwright>=1.49.1",
    "python-dateutil>=2.9.0.post0",
    "trafilatura>=2.0.0",
    "waybackpy>=3.0.6",
]

[dependency-groups]
dev = []

[tool.uv.sources]
