[project]
name = "rss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "msgspec>=0.19.0",
    "podcast-shared",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.7.0",
    "types-beautifulsoup4>=4.12.0",
    "types-python-dateutil>=2.9.0",
]

[tool.ruff]
extend = "../pyproject.toml"

[tool.basedpyright]
extends = "../pyproject.toml"

[tool.uv.sources]
podcast-shared = { path = "../shared" }
