[project]
name = "text-to-speech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "google-cloud-texttospeech>=2.23.0",
    "mutagen>=1.47.0",
    "openai>=1.50.0",
    "pydub>=0.25.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
preview = true

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportImplicitOverride = "error"
reportMissingTypeStubs = "error"
reportPrivateUsage = "error"
reportUnusedCallResult = "error"
reportUnnecessaryTypeIgnoreComment = "error"

[tool.uv.sources]
