[project]
name = "text-to-speech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "google-cloud-texttospeech>=2.23.0",
    "podcast-shared",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.20.0",
    "ruff>=0.7.0",
    "types-beautifulsoup4>=4.12.0",
    "types-requests>=2.32.0",
]

[tool.ruff]
extend = "../pyproject.toml"

[tool.basedpyright]
extends = "../pyproject.toml"

[tool.uv.sources]
podcast-shared = { path = "../shared" }
